integ-tests/tests/snapshots/parser__bad_inline_tables__eof.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ eof:1:6
  │
1 │ a = {
  │      ^ expected a table key


